--- a/maze.html
+++ b/maze.html
@@ -4,9 +4,6 @@
 <head>
    <meta charset="utf-8">
    <title>迷宫</title>
-
-
-
    <style>
       table {
          border-collapse: collapse;
@@ -41,13 +38,11 @@
          border-bottom: 1px solid transparent;
       }
    </style>
-
-
-
    <script>
+      "use strict";
       //生成网格
-      function net() {
-         var grid = ""
+      var net = () => {
+         var grid = "";
          for (let i = 0; i < 50; i++) {
             grid = grid + "<tr>";
             for (let j = 0; j < 50; j++) {
@@ -56,12 +51,18 @@
             grid = grid + "</tr>";
          }
          document.getElementById("maze").innerHTML = grid;
-
+         //清空之前生成的。
+         nodes = [];
+         road = [];
+         var firstnode = new Node([0, 0]); //建立初始节点对象。
+         //console.log(firstnode.node);
+         nodes.push(firstnode.node); //把第一个节点的坐标推入数组。
+         return firstnode.go();
       }
       //生成迷宫
       var nodes = new Array(); //建立全局污染保存已遍历过在节点坐标。
       var road = new Array(); //建立全局污染保存迷宫正确路径
-      function isin(a, b) { //遍历程序,判断数组a是否在二维数组b中
+      var isin = (a, b) => { //遍历程序,判断数组a是否在二维数组b中
          if (b.length != 0) {
             for (let i = 0; i < b.length; i++) {
                if ((b[i][0] === a[0]) && (b[i][1] === a[1])) {
@@ -75,6 +76,7 @@
       class Node {
          constructor(node) {
             //构造节点自己
+            //this.node = new Array();
             this.node = node;
             //建立一个数组保存左节点
             this.left = new Array();
@@ -93,8 +95,7 @@
             this.down[0] = node[0] + 1;
             this.down[1] = node[1];
          }
-
-         go() {
+         go = () => {
             this.children = new Array(); //建立一个数组保存子节点,这个数组是个二维数组
             if ((this.node[1] > 0) && (isin([this.node[0], (this.node[1] - 1)], nodes) === -
                1)) { //子节点要保证不超过边缘，还要保证该节点没被遍历过
@@ -116,20 +117,9 @@
                var newnode = new Node(child); //new出子节点
                nodes.push(child); //用全局污染保存已遍历过在节点坐标。
                newnode.father = this;//为子节点增加一个属性：父节点的指针
-               //console.log(child);
-
                //迷宫正确道路标记函数
-               function pushfather(foo) { //用来保存一个点的所有父节点
-                  road.push(foo.node);
-                  if ((foo.node[0] == 0) && (foo.node[1] == 0)) {
-                     //  console.log('road');
-                     return;
-                  }
-                  pushfather(foo.father);
-               }
                if ((child[0] === 49) && (child[1] === 49)) { //保存出口节点（[49,49]）的父节点，这个函数只运行一次，因为任何节点只会被生成一次。
                   pushfather(newnode);
-                  //  console.log('road');
                }
                //开始拆墙
                if ((child[0] == this.up[0]) && (child[1] == this.up[1])) {
@@ -167,17 +157,18 @@
                return;
             }
          }
-
-
-
-
       }
-      var firstnode = new Node([0, 0]); //建立初始节点对象。
-      //console.log(firstnode.node);
-      nodes.push(firstnode.node); //把第一个节点的坐标推入数组。
-      //生成子节点，采取随机的深度优先遍历在方法做图转树。遍历与树生成同步进行，生成在新节点推入nodes数组,然后启动递归。直到某子节点在所有子节点都被生成过，退回父节点递归。递归出口为[0,0]。
 
-      function markroad() {
+      //生成子节点，采取随机的深度优先遍历在方法做图转树。遍历与树生成同步进行，生成在新节点推入nodes数组,然后启动递归。直到某子节点在所有子节点都被生成过，退回父节点递归。递归出口为[0,0]。
+      var pushfather = (foo) => { //用来保存一个点的所有父节点
+         road.push(foo.node);
+         if ((foo.node[0] == 0) && (foo.node[1] == 0)) {
+            //  console.log('road');
+            return;
+         }
+         return pushfather(foo.father);
+      }
+      var markroad = () => {
          for (let i = 0; i < 50; i++) {
             for (let j = 0; j < 50; j++) {
                if (isin(([i, j]), road) === 1) {
@@ -187,21 +178,13 @@
             }
          }
       }
-
    </script>
 </head>
 
-
 <body>
-
-
    <table id="maze"></table>
-   <button onclick="net()">生成网格</button>
-   <button onclick="firstnode.go()">生成迷宫</button>
+   <button onclick="net()">生成迷宫</button>
    <button onclick="markroad()">走迷宫</button>
-
-
-
 </body>
 
 </html>
