--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
    <meta charset="utf-8">
    <title>迷宫</title>
@@ -7,9 +8,11 @@
       table {
          border-collapse: collapse;
       }
+
       .road {
          background-color: pink;
       }
+
       td {
          width: 10px;
          height: 10px;
@@ -18,15 +21,19 @@
          border-right: 1px solid black;
          border-bottom: 1px solid black;
       }
+
       .top {
          border-top: 1px solid transparent;
       }
+
       .left {
          border-left: 1px solid transparent;
       }
+
       .right {
          border-right: 1px solid transparent;
       }
+
       .bottom {
          border-bottom: 1px solid transparent;
       }
@@ -36,7 +43,8 @@
 <body>
    <table id="maze"></table>
    <h3>请设定迷宫尺寸</h3>
-   <p>0<input type="range" id="myRange">100</p>
+   <p>0<input type="range" id="myRange" oninput="rangeListener()">100</p>
+   <p> 迷宫的边长是<span id="sideLength">50</span></p>
    <button onclick="go()">生成迷宫</button>
    <button onclick="markroad()">走迷宫</button>
 </body>
@@ -120,14 +128,13 @@
          nodes.push(firstnode.node); //把第一个节点的坐标推入数组。
          firstnode.countChildrennode();//计算子节点数n
          //开始深度优先遍历
-         for (let node = firstnode; (node.n > 0 || node !== firstnode);) {
+         for (let node = firstnode; (node.n > 0 || node !== firstnode); node.countChildrennode()) {//每次循环结束计算新节点的子节点数n
             if (node.n > 0) {
                let direction = Math.floor(Math.random() * node.n); //根据子节点数目进行随机选择子节点
                let [...child] = node.children[direction]; //建立子节点,解构赋值实现深拷贝
                let newnode = new Node(child); //new出子节点
                nodes.push(child); //保存已遍历过的节点坐标。
                newnode.father = node;//为子节点增加一个属性：父节点的指针
-               newnode.countChildrennode();//计算新节点的子节点数n
                if ((child[0] + 1 === Number(a)) && (child[1] + 1 === Number(a))) { //保存出口节点（[a-1,a-1]）的父节点，这个函数只运行一次，因为任何节点只会被生成一次。注意，这里的a是个string）           
                   pushfather(newnode);
                }
@@ -160,7 +167,6 @@
             }
             else {
                node = node.father;
-               node.countChildrennode()
             }
          }
          //出口和入口
@@ -188,6 +194,8 @@
       return { go, markroad }
    }
    let { go, markroad } = app();//解构赋值，注意这里app（）必须只运行一次否则go和markroad无法共享变量。
+   let rangeListener = () => { let x = document.getElementById("myRange").value; document.getElementById("sideLength").innerHTML = x; };
+
 </script>
 
 </html>
